added a container for the list of cities

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <h3 class="search-title">Search for a City</h3>
             <input type="text" placeholder="Search..">
         </div>
+        <div class="list-cities">
+            <div class="city-container" id="city-container">
+                <div class="city-text"></div>
+            </div>
+        </div>
     </aside>
 </body>
 </html>
