--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <aside class="aside">
         <div class="search">
             <h3 class="search-title">Search for a City</h3>
-            <input type="text" placeholder="Search..">
+            <input type="text" placeholder="Enter City...." id="search-city">
+            <button>Search</button>
         </div>
         <div class="list-cities">
             <div class="city-container" id="city-container">
@@ -63,5 +64,7 @@
             </div>
         </div>
     </aside>
+
+    <script src="script.js"></script>
 </body>
 </html>
