adding to listPast function

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </nav>
 
     <aside class="aside">
-        <div class="search">
+        <div class="search-div">
             <h3 class="search-title">Search for a City</h3>
             <input type="text" placeholder="Enter City...." id="search-city">
-            <button>Search</button>
+            <button id="search">Search</button>
         </div>
         <div class="list-cities">
             <div class="city-container" id="city-container">
