added usrl for uv

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
             <input type="text" placeholder="Enter City...." id="search-city">
             <button id="search">Search</button>
         </div>
-        <div class="list-cities">
-            <div class="city-container" id="city-container">
-                <div class="city-text">Austin</div>
-            </div>
-        </div>
+        <div class="list-cities"></div>
         <div class="current-container">
             <div class="current-city">
                 <h1 class="current-city-text">Austin</h1>
