--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             <h2 class="forecast-heading">5-Day Forecast</h2>
             <div class="card-container">
                 <div class="forecast-day-container">
-                    <div class="date-1" id="date-1">1/1/2020</div>
+                    <div class="date-1" id="date-1">Monday</div>
                     <div class="temp-1" id="temp-1">Temperature: <span id="t-1"></span></div>
                     <div class="humidity-1" id="humidity-1">Humidity: <span id="h-1"></span></div>
                 </div>
                 <div class="forecast-day-container">
-                    <div class="date-2" id="date-2">1/2/2020</div>
+                    <div class="date-2" id="date-2">Tuesday</div>
                     <div class="temp-2" id="temp-2">Temperature: <span id="t-2"></span></div>
                     <div class="humidity-2" id="humidity-2">Humidity: <span id="h-2"></span></div>
                 </div>
                 <div class="forecast-day-container">
-                    <div class="date-3" id="date-3">1/3/2020</div>
+                    <div class="date-3" id="date-3">Wednesday</div>
                     <div class="temp-3" id="temp-3">Temperature: <span id="t-3"></span></div>
                     <div class="humidity-3" id="humidity-3">Humidity: <span id="h-3"></span></div>
                 </div>
                 <div class="forecast-day-container">
-                    <div class="date-4" id="date-4">1/4/2020</div>
+                    <div class="date-4" id="date-4">Thursday</div>
                     <div class="temp-4" id="temp-4">Temperature: <span id="t-4"></span></div>
                     <div class="humidity-4" id="humidity-4">Humidity: <span id="h-4"></span></div>
                 </div>
                 <div class="forecast-day-container">
-                    <div class="date-5" id="date-5">1/5/2020</div>
+                    <div class="date-5" id="date-5">Friday</div>
                     <div class="temp-5" id="temp-5">Temperature: <span id="t-5"></span></div>
                     <div class="humidity-5" id="humidity-5">Humidity: <span id="h-5"></span></div>
                 </div>
