when user clicks it adds the city title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="list-cities"></div>
         <div class="current-container">
             <div class="current-city">
-                <h1 class="current-city-text">Austin</h1>
+                <h1 class="current-city-text"><span id="current-city-text"></span></h1>
                 <div class="temp" id="temp">Temperature: <span id="current-temp"></span></div>
                 <div class="humidity" id="humidity">Humidity: <span id="current-humidity"></span></div>
                 <div class="wind" id="wind">Wind Speed: <span id="current-wind"></span></div>
